Traducción de la interfaz

--- a/cpadmin/theme/css/icomoon.css
+++ b/cpadmin/theme/css/icomoon.css
@@ -65,7 +65,7 @@
 .icon-drawer-2:before { content: "\e09e"; }
 .icon-box-add:before { content: "\e09d"; }
 .icon-box-remove:before { content: "\e09c"; }
-.icon-database:before { content: "\e09b"; }
+.icon-Database:before { content: "\e09b"; }
 .icon-undo:before { content: "\e09a"; }
 .icon-redo:before { content: "\e099"; }
 .icon-forward:before { content: "\e098"; }
